Prevent team avatar footer overlap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -218,6 +218,12 @@ ul.task-list input[type="checkbox"] {
   margin-right: 1rem;
 }
 
+.team-profile-content::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+
 @media (min-width: 576px) {
   .profile {
     width: 30%;
